I need to learn html and css. Changed the link to pdf and epub to the toolbar.

--- a/_output.yml
+++ b/_output.yml
@@ -3,11 +3,13 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">Metodologia científica e Bioestatística</a></li>
+        <li><a href="https://raw.githubusercontent.com/drhrf/MCBS/master/_main_files/MCBSbook.pdf" target="blank">Baixar MCBS como PDF</a></li>
+        <li><a href="https://raw.githubusercontent.com/drhrf/MCBS/master/_main_files/MCBSbook.epub" target="blank">Baixar MCBS como EPUB</a></li>
+        <li><a href="./">SUMÁRIO</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Publicado com bookdown</a></li>
-    edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
-    download: ["pdf"]
+    #edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
+    download: false
   includes: 
     in_header: _custom_header.html
 bookdown::pdf_book:
@@ -15,3 +17,4 @@ bookdown::pdf_book:
   keep_tex: yes
   output_file: "MCBSbook.pdf"
   output_dir: "_main_files"
+bookdown::epub_book: default
