--- a/_output.yml
+++ b/_output.yml
@@ -13,6 +13,8 @@ bookdown::gitbook:
   includes: 
     in_header: _custom_header.html
 bookdown::pdf_book:
+  includes:
+    in_header: custom-header.tex
   latex_engine: xelatex
   keep_tex: yes
   output_file: "MCBSbook.pdf"
